--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
   "author": "Boris Dinkevich & Ilya Gelman",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "babel-loader": "^8.0.6",
     "jquery": "3.2.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "redux": "3.7.2"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.7.4",
     "webpack": "3.10.0",
     "webpack-dev-server": "2.9.7"
   }
